# fantasy_funball_streamlit

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  fantasy_funball.py  page_manager.py  pyproject.toml  requirements.txt  streamlit_app.py  tox.ini
.github/workflows/: linting_workflow.yml  testing_workflow.yml
.streamlit/: secrets.toml
pages/: __init__.py  choices.py  demo_page.py  gameweeks.py  page_manager.py  players.py  standings.py
src/: Fantasy_Funball.py  fantasy_funball.py
src/interface/: __init__.py  fantasy_funball.py  formatter.py
src/logic/: choices.py  gameweeks.py  players.py  standings.py
src/pages/: 1_🏆_Standings.py  2_⚽_Choices.py  3_📅_Gameweeks.py  4_🏃_Players.py  __init__.py  about.py  choices.py  gameweeks.py  page_manager.py  players.py  standings.py
src/utilities/: __init__.py  formatting.py  gameweek.py  models.py  team_names.py
tests/unit/test_interface/: test_fantasy_funball.py  test_formatter.py
tests/unit/test_logic/: test_choices.py  test_players.py  test_standings.py
tests/unit/test_utilities/: conftest.py  test_gameweek.py  test_team_names.py
tests/unit_tests/test_logic/: test_choices.py  test_players.py  test_standings.py
tests/unit_tests/test_pages/: test_choices.py  test_gameweeks.py  test_players.py  test_standings.py
tests/unit_tests/test_utilities/: test_gameweek.py  test_team_names.py
utilities/: helpers.py  team_names.py
