[tool.poetry]
name = "fantasy_funball_streamlit"
version = "0.5.1"
description = "Fantasy Funball Streamlit App"
authors = ["p-ml <34091508+pjjml@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.9"
streamlit = "^1.3.0"
requests = "*"
pandas = "==1.2.4"
watchdog = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py39']
